SigmaCodebackup3rdSep/objects/Product_transfer__c.object
<CustomObject>
    <fields>
        <fullName>Automatic_Replenishment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic Replenishment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Bin</label>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Product Transfer (From Bin)</relationshipLabel>
        <relationshipName>Product_Transfer1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Location_Name__c</fullName>
        <formula>Product_Transfer_From_location__r.Location_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductTransferToLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Transfer To Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Product Transfer To Location</relationshipLabel>
        <relationshipName>Product_Transfer_To_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Request</label>
        <referenceTo>Product_Request__c</referenceTo>
        <relationshipLabel>Product Transfer</relationshipLabel>
        <relationshipName>Product_Transfer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Transfer_From_location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Transfer From location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Product Transfer From Location</relationshipLabel>
        <relationshipName>Product_Transfer_From_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Transfer (Request Location)</relationshipLabel>
        <relationshipName>Product_Transfer1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Bin</label>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Product Transfer</relationshipLabel>
        <relationshipName>Product_Transfer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Location_Name__c</fullName>
        <formula>ProductTransferToLocation__r.Location_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Requested_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Requested Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Transfer</relationshipLabel>
        <relationshipName>Product_Transfer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Status__c</fullName>
        <label>Transfer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Product Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <formula>Product_Request__r.Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User</label>
        <type>Text</type>
    </fields>
    <label>Product Transfer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transfer_Status__c</columns>
        <columns>Automatic_Replenishment__c</columns>
        <columns>From_Location_Name__c</columns>
        <columns>To_Location_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Product_Transfers_Completed</fullName>
        <columns>NAME</columns>
        <columns>Transfer_Status__c</columns>
        <columns>Automatic_Replenishment__c</columns>
        <columns>From_Location_Name__c</columns>
        <columns>To_Location_Name__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Product Transfers Completed</label>
    </listViews>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Product Transfer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Transfer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>